--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -1,3 +1,4 @@
+
 <h1>Student</h1>
     <div class="box mb-5 shadow" style="background-color: #bd7b67;;">
         <table class="table" style="background-color: #eaeaea;">
@@ -13,10 +14,7 @@
               </tr>
             </thead>  
             <tbody>
-                <% 
-                    
-                        for (let i = 0; i < Object.keys(Studentresult).length; i++) {   
-                            %>
+                <% for (let i = 0; i < Object.keys(Studentresult).length; i++) {   %>
                                 <th scope="row"><%=i+1%></th>
                                 <td><%=Studentresult[i].email %></td>
                                 <td><%=Studentresult[i].ClassName %></td>
@@ -51,7 +49,12 @@
                                 <% } %>
                             </td>
                                 <td>
-                                    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+                                  
+                                  <div class="pie" data-start="0" data-value="30"></div>
+                                  <div class="pie highlight" data-start="30" data-value="30"></div>
+                                  <div class="pie" data-start="60" data-value="40"></div>
+                                  <div class="pie big" data-start="100" data-value="260"></div>
+                                    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
                                     <body>
                                     
                                     <canvas id="myChart" style="width:100%;max-width:400px"></canvas>
@@ -85,7 +88,7 @@
                                     });
                                     </script>
                                     
-                                    </body>
+                                    </body> -->
                                 </td>
                                 </tr>
                             <%
