--- a/public/stylesheets/chart.css
+++ b/public/stylesheets/chart.css
@@ -257,3 +257,38 @@ p[data-value]:after {
 }
 
 
+progress[value]::-webkit-progress-value {
+  background-color: #bd7b67;
+}
+progress[value]::-webkit-progress-bar {
+  background-color: #e2ddc8;
+  width: 400px;
+}
+
+
+.progress {
+  width: 300px; 
+  height: 13px; 
+  background-color: #e2ddc8;
+  border: solid 1px#96534a;
+}
+.progressvalue {
+  color: #fff;
+  height: 14px;
+  font-size: 10px; 
+  text-align: start;
+  background-color: #bd7b67;
+  padding-left: 5px;
+}
+.bar {
+  width: 80px; 
+  height: 13px; 
+  background-color: #f7f7f7;
+  margin-top: 1px;
+}
+.barValue {
+  height: 13px;
+  font-size: 10px; 
+  text-align: start;
+  padding-left: 3px;
+}
