--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -53,55 +53,39 @@
                                 <% } %>
                             </td>
                                 <td>
-                                  2: <%=Studentresult[i].post2lv1 %> <br>
-                                  1: <%=Studentresult[i].post1lv1 %> <br>
-                                  <%= Studentresult[i].post1lv1+Studentresult[i].post2lv1 %>
-                                  <progress  max="10" value=<%=Studentresult[i].post2lv1+Studentresult[i].post2lv1 %>  class="html5 "></progress>
-                                  <div class="pie" data-start="0" data-value="30"></div>
-                                  <div class="pie highlight" data-start="30" data-value="30"></div>
-                                  <div class="pie" data-start="60" data-value="40"></div>
-                                  <div class="pie big" data-start="100" data-value="260"></div>
-                                    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-                                    <body>
+                                  <%= Studentresult.length %> <br>
+                                  K <%= Studentresult[i].pre1lv1+Studentresult[i].pre2lv1+Studentresult[i].pre3lv1+Studentresult[i].pre4lv1+Studentresult[i].pre5lv1+Studentresult[i].pre6lv1+Studentresult[i].pre7lv1+Studentresult[i].pre8lv1 %>
+                                  <progress  max="10" value=<%= Studentresult[i].pre1lv1+Studentresult[i].pre2lv1+Studentresult[i].pre3lv1+Studentresult[i].pre4lv1+Studentresult[i].pre5lv1+Studentresult[i].pre6lv1+Studentresult[i].pre7lv1+Studentresult[i].pre8lv1 %>  class="html5 "></progress>
+                                  
+                                  <br>
+                                  K <%= (Studentresult[i].post1lv1+Studentresult[i].post2lv1+Studentresult[i].post3lv1+Studentresult[i].post4lv1+Studentresult[i].post5lv1+Studentresult[i].post6lv1+Studentresult[i].post7lv1+Studentresult[i].post8lv1)*10 %>
+                                  <progress  max="10" value=<%= Studentresult[i].post1lv1+Studentresult[i].post2lv1+Studentresult[i].post3lv1+Studentresult[i].post4lv1+Studentresult[i].post5lv1+Studentresult[i].post6lv1+Studentresult[i].post7lv1+Studentresult[i].post8lv1 %>  class="html5 "></progress>
+                                  <br>
+                                  T <%= Studentresult[i].pre1lv2+Studentresult[i].pre2lv2+Studentresult[i].pre3lv2+Studentresult[i].pre4lv2+Studentresult[i].pre5lv2+Studentresult[i].pre6lv2+Studentresult[i].pre7lv2+Studentresult[i].pre8lv2 %>
+                                  <progress  max="10" value=<%= Studentresult[i].pre1lv2+Studentresult[i].pre2lv2+Studentresult[i].pre3lv2+Studentresult[i].pre4lv2+Studentresult[i].pre5lv2+Studentresult[i].pre6lv2+Studentresult[i].pre7lv2+Studentresult[i].pre8lv2 %>  class="html5 "></progress>
+                                  <br>
+                                  T <%= Studentresult[i].post1lv2+Studentresult[i].post2lv2+Studentresult[i].post3lv2+Studentresult[i].post4lv2+Studentresult[i].post5lv2+Studentresult[i].post6lv2+Studentresult[i].post7lv2+Studentresult[i].post8lv2 %>
+                                  <progress  max="10" value=<%= Studentresult[i].post1lv2+Studentresult[i].post2lv2+Studentresult[i].post3lv2+Studentresult[i].post4lv2+Studentresult[i].post5lv2+Studentresult[i].post6lv2+Studentresult[i].post7lv2+Studentresult[i].post8lv2 %>  class="html5 "></progress>
+                                  <br>
+                                  E <%= Studentresult[i].pre1lv3+Studentresult[i].pre2lv3+Studentresult[i].pre3lv3+Studentresult[i].pre4lv3+Studentresult[i].pre5lv3+Studentresult[i].pre6lv3+Studentresult[i].pre7lv3+Studentresult[i].pre8lv3 %>
+                                  <progress  max="10" value=<%= Studentresult[i].pre1lv3+Studentresult[i].pre2lv3+Studentresult[i].pre3lv3+Studentresult[i].pre4lv3+Studentresult[i].pre5lv3+Studentresult[i].pre6lv3+Studentresult[i].pre7lv3+Studentresult[i].pre8lv3 %>  class="html5 "></progress>
+                                  <br>
+                                  E <%= Studentresult[i].post1lv3+Studentresult[i].post2lv3+Studentresult[i].post3lv3+Studentresult[i].post4lv3+Studentresult[i].post5lv3+Studentresult[i].post6lv3+Studentresult[i].post7lv3+Studentresult[i].post8lv3 %>
+                                  <progress  max="10" value=<%= Studentresult[i].post1lv3+Studentresult[i].post2lv3+Studentresult[i].post3lv3+Studentresult[i].post4lv3+Studentresult[i].post5lv3+Studentresult[i].post6lv3+Studentresult[i].post7lv3+Studentresult[i].post8lv3 %>  class="html5 "></progress>
+                                  <br>
+                                  W <%= Studentresult[i].pre1lv4+Studentresult[i].pre2lv4+Studentresult[i].pre3lv4+Studentresult[i].pre4lv4+Studentresult[i].pre5lv4+Studentresult[i].pre6lv4+Studentresult[i].pre7lv4+Studentresult[i].pre8lv4 %>
+                                  <progress  max="10" value=<%= Studentresult[i].pre1lv4+Studentresult[i].pre2lv4+Studentresult[i].pre3lv4+Studentresult[i].pre4lv4+Studentresult[i].pre5lv4+Studentresult[i].pre6lv4+Studentresult[i].pre7lv4+Studentresult[i].pre8lv4 %>  class="html5 "></progress>
+                                  <br>
+                                  W <%= Studentresult[i].post1lv4+Studentresult[i].post2lv4+Studentresult[i].post3lv4+Studentresult[i].post4lv4+Studentresult[i].post5lv4+Studentresult[i].post6lv4+Studentresult[i].post7lv4+Studentresult[i].post8lv4 %>
+                                  <progress  max="10" value=<%= Studentresult[i].post1lv4+Studentresult[i].post2lv4+Studentresult[i].post3lv4+Studentresult[i].post4lv4+Studentresult[i].post5lv4+Studentresult[i].post6lv4+Studentresult[i].post7lv4+Studentresult[i].post8lv4 %>  class="html5 "></progress>
+                                  <br>
+
+                                  
                                     
-                                    <canvas id="myChart" style="width:100%;max-width:400px"></canvas>
-                                    
-                                    <script>
-                                    const xValues = ["Knowledge", "Tracing", "Explaining", "Writing"];
-                                    const yValues = [55, 49, 44, 24];
-                                    const barColors = [
-                                      "#b91d47",
-                                      "#00aba9",
-                                      "#2b5797",
-                                      "#e8c3b9",
-                                      "#1e7145"
-                                    ];
-                                    
-                                    new Chart("myChart", {
-                                      type: "pie",
-                                      data: {
-                                        labels: xValues,
-                                        datasets: [{
-                                          backgroundColor: barColors,
-                                          data: yValues
-                                        }]
-                                      },
-                                      options: {
-                                        title: {
-                                          display: true,
-                                          text: "Competency"
-                                        }
-                                      }
-                                    });
-                                    </script>
-                                    
-                                    </body> -->
+
                                 </td>
                                 </tr>
-                            <%
-                        
-                    }
-                %>
+                          <% } %>
             </tbody>
         </table>
     </div>
